--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ header {
 </div>
 
 <div class="contact-section">
-    <a href="www.linkedin.com/in/juan-camilo-navia-castrillon-316210266" class="contact-button glass">
+    <a href="https://www.linkedin.com/in/juan-camilo-navia-castrillon-316210266" class="contact-button glass">
         <i class="fab fa-linkedin"></i> Conecta conmigo en LinkedIn
     </a>
     <a href="mailto:camilojuan197@gmail.com" class="contact-button email glass">
